@@ -1,3 +1,7 @@
+2016-01-18  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
+
+	* fwrite.c: Fix bug of -g option.
+
 2015-08-23  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
 
 	* main.c, fwrite.c: Accept long file name for a log file and
